Changed so you have to hold down E when hacking

--- a/ProjectEspionage/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/ProjectEspionage/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -105,7 +105,7 @@ ContentBrowserTab1.SelectedPaths=/Game/TopDownBP/Blueprints
 ContentBrowserTab1.SelectedPaths=/Game/Mannequin/Character/Textures
 ContentBrowserTab1.SelectedPaths=/Game/TopDownBP/Maps
 ContentBrowserTab1.SelectedPaths=/Game/AI
-ContentBrowserTab1.SelectedPaths=/Game/TopDownBP/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/TopDownBP/Character
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
@@ -173,7 +173,7 @@ LastLogListing=PIE
 LastLogListing=FBXImport
 LastLogListing=LoadErrors
 LastLogListing=LoadErrors
-LastLogListing=LightingResults
+LastLogListing=PIE
 None=======
 None=======
 PakFile.TimeStamp=2018.01.26-13.19.58
@@ -740,7 +740,7 @@ CleanShutdown=True
 
 [RootWindow]
 ScreenPosition=X=332.000 Y=324.000
-ScreenPosition=X=320.000 Y=160.000
+ScreenPosition=X=285.000 Y=3.000
 None=======
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=True
@@ -1890,6 +1890,10 @@ ClothingSystemEditorInterface.TimeStamp=2018.01.26-13.15.45
 ClothingSystemEditorInterface.LastCompileMethod=Unknown
 TextureEditor.TimeStamp=2018.01.26-13.15.49
 TextureEditor.LastCompileMethod=Unknown
+AnimationBlueprintEditor.TimeStamp=2018.01.26-13.15.45
+AnimationBlueprintEditor.LastCompileMethod=Unknown
+SequencerWidgets.TimeStamp=2018.01.26-13.15.48
+SequencerWidgets.LastCompileMethod=Unknown
 
 [DetailCategories]
 AI_Patroll_C.Tick=True
@@ -4380,6 +4384,77 @@ K2Node_InputAction.Input=True
 LightmassImportanceVolume.TransformCommon=True
 LightmassImportanceVolume.BrushSettings=True
 LightmassImportanceVolume.Actor=True
+BP_LiamAnimation_C.Default=True
+BP_LiamAnimation_C.RootMotion=True
+AnimationStateMachineGraph.Graph=True
+AnimationGraph.Graph=True
+AnimationTransitionGraph.Graph=True
+AnimStateNode.GraphNodeDetail=True
+AnimStateNode.Animation State=True
+AnimGraphNode_StateResult.Settings=True
+AnimGraphNode_StateMachine.GraphNodeDetail=True
+AnimGraphNode_StateMachine.Settings=True
+AnimGraphNode_SequencePlayer.Settings=True
+AnimGraphNode_SequencePlayer.Relevancy=True
+AnimationStateGraph.Graph=True
+AnimStateConduitNode.GraphNodeDetail=True
+AnimStateTransitionNode.Transition=True
+AnimStateTransitionNode.BlendSettings=True
+AnimStateTransitionNode.Events=True
+AnimStateTransitionNode.Notifications=True
+AnimSequence.Animation=True
+AnimSequence.AdditiveSettings=True
+AnimSequence.Compression=True
+AnimSequence.RootMotion=True
+AnimSequence.ImportSettings=True
+AnimSequence.Transform=True
+AnimSequence.Miscellaneous=True
+AnimSequence.File Path=True
+AnimSequence.MetaData=True
+AnimSequence.Thumbnail=True
+FloatProperty.Variable=True
+FloatProperty.DefaultValueCategory=True
+TopDownCharacter_C.Default=True
+AnimGraphNode_RandomPlayer.Settings=True
+HackingHUD_C.Default=True
+HackingHUD_C.Appearance=True
+HackingHUD_C.Designer=True
+HackingHUD_C.Input=True
+HackingHUD_C.Interaction=True
+HackingHUD_C.Layout=True
+HackingHUD_C.Behavior=True
+HackingHUD_C.Render Transform=True
+HackingHUD_C.Performance=True
+HackingHUD_C.Clipping=True
+HackingHUD_C.Navigation=True
+TextBlock.Layout=True
+TextBlock.Content=True
+TextBlock.Appearance=True
+TextBlock.Performance=True
+TextBlock.Wrapping=True
+TextBlock.Behavior=True
+TextBlock.Render Transform=True
+TextBlock.Clipping=True
+TextBlock.Navigation=True
+StartHackHUD_C.Appearance=True
+StartHackHUD_C.Designer=True
+StartHackHUD_C.Input=True
+StartHackHUD_C.Interaction=True
+StartHackHUD_C.Layout=True
+StartHackHUD_C.Behavior=True
+StartHackHUD_C.Render Transform=True
+StartHackHUD_C.Performance=True
+StartHackHUD_C.Clipping=True
+StartHackHUD_C.Navigation=True
+ProgressBar.Layout=True
+ProgressBar.Style=True
+ProgressBar.Progress=True
+ProgressBar.Appearance=True
+ProgressBar.Behavior=True
+ProgressBar.Render Transform=True
+ProgressBar.Performance=True
+ProgressBar.Clipping=True
+ProgressBar.Navigation=True
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bUseUnsortedMenus=False
@@ -4475,13 +4550,19 @@ bImportAnimations=True
 /Game/TopDownBP/StealthGuy/Liam_Top_Opacity.Liam_Top_Opacity=1
 /Game/TopDownBP/StealthGuy/Liam_Top_Normal_Mat.Liam_Top_Normal_Mat=1
 /Game/TopDownBP/Blueprints/BPHackingTerminal2.BPHackingTerminal2=1
+/Game/TopDownBP/StealthGuy/Animation/Zombie_Death.Zombie_Death=1
+/Game/TopDownBP/StealthGuy/Animation/Waving.Waving=1
+/Game/TopDownBP/Character/FailedHUD.FailedHUD=1
+/Game/TopDownBP/Character/HackingHUD.HackingHUD=1
+/Game/TopDownBP/Character/FinishedHUD.FinishedHUD=1
+/Game/TopDownBP/Character/StartHackHUD.StartHackHUD=1
 
 [DetailPropertyExpansion]
 BlackboardData="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[0].KeyType\" "
 DataAsset="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[0].KeyType\" "
 DataAsset="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 Object=
-Object="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
+Object=
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume=
 Brush=
@@ -4555,7 +4636,7 @@ REINST_AI_Character_C_106="\"Object.Character.CharacterMovement.Object.Character
 REINST_AI_Character_C_118="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 AIPerceptionStimuliSourceComponent="\"Object.AI Perception.RegisterAsSourceForSenses\" \"Object.Tags.ComponentTags\" "
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
-TopDownCharacter_C="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
+TopDownCharacter_C=
 StaticMeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
 BoxComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
 ShapeComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
@@ -6529,5 +6610,23 @@ None=======
 
 [SelectionDetails]
 PreserveScaleRatio=True
+
+[WidgetTemplatesExpanded]
+Extra=False
+Input=False
+Optimization=False
+Panel=False
+Primitive=False
+Special Effects=False
+Uncategorized=False
+User Created=False
+
+[SuppressableDialogs]
+DeleteVariableInUse_Warning=False
+
+[UMGEditor.Designer]
+PreviewWidth=1280
+PreviewHeight=720
+PreviewAspectRatio=16:9
 
 
