Added office desk and mouse

--- a/ProjectEspionage/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/ProjectEspionage/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -105,7 +105,7 @@ ContentBrowserTab1.SelectedPaths=/Game/TopDownBP/Blueprints
 ContentBrowserTab1.SelectedPaths=/Game/Mannequin/Character/Textures
 ContentBrowserTab1.SelectedPaths=/Game/TopDownBP/Maps
 ContentBrowserTab1.SelectedPaths=/Game/AI
-ContentBrowserTab1.SelectedPaths=/Game/TopDownBP/Character
+ContentBrowserTab1.SelectedPaths=/Game/TopDownBP/Assets/Mouse
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
@@ -165,46 +165,75 @@ SequenceBrowser.HiddenColumns=CurveNameList
 SequenceBrowser.HiddenColumns=Class
 
 [EditorStartup]
-<<<<<<< HEAD
-LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
+LastLevel=/Game/TopDownBP/Maps/TestMap
 
 [AssetEditorManager]
+CleanShutdown=True
 CleanShutdown=True
 
 [RootWindow]
 ScreenPosition=X=332.000 Y=324.000
+ScreenPosition=X=332.000 Y=324.000
+ScreenPosition=X=145.000 Y=220.000
+WindowSize=X=1280.000 Y=720.000
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=True
+InitiallyMaximized=True
+None=======
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
+Viewport 1.LayoutType=FourPanes2x2
+FourPanes2x2.Viewport 1.Percentages0=X=0.500 Y=0.500
 FourPanes2x2.Viewport 1.Percentages0=X=0.500 Y=0.500
 FourPanes2x2.Viewport 1.Percentages1=X=0.500 Y=0.500
+FourPanes2x2.Viewport 1.Percentages1=X=0.500 Y=0.500
+FourPanes2x2.Viewport 1.Percentages2=X=0.500 Y=0.500
 FourPanes2x2.Viewport 1.Percentages2=X=0.500 Y=0.500
 FourPanes2x2.Viewport 1.Percentages3=X=0.500 Y=0.500
+FourPanes2x2.Viewport 1.Percentages3=X=0.500 Y=0.500
+FourPanes2x2.Viewport 1.Viewport0.TypeWithinLayout=Default
 FourPanes2x2.Viewport 1.Viewport0.TypeWithinLayout=Default
 FourPanes2x2.Viewport 1.Viewport1.TypeWithinLayout=Default
+FourPanes2x2.Viewport 1.Viewport1.TypeWithinLayout=Default
+FourPanes2x2.Viewport 1.Viewport2.TypeWithinLayout=Default
 FourPanes2x2.Viewport 1.Viewport2.TypeWithinLayout=Default
 FourPanes2x2.Viewport 1.Viewport3.TypeWithinLayout=Default
+FourPanes2x2.Viewport 1.Viewport3.TypeWithinLayout=Default
 FourPanes2x2.Viewport 1.bIsMaximized=True
+FourPanes2x2.Viewport 1.bIsMaximized=True
+FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
 UNR=F:/My Documents/Unreal Projects/Group-D-Ass2-Game/ProjectEspionage/Content/TopDownBP/Maps
+UNR=../../../../../../Users/asus/Documents/Unreal Projects/Group-D-Ass2-Game/ProjectEspionage/Content/TopDownBP/Maps
+BRUSH=F:/My Documents/Unreal Projects/Group-D-Ass2-Game/ProjectEspionage/Content/
 BRUSH=F:/My Documents/Unreal Projects/Group-D-Ass2-Game/ProjectEspionage/Content/
 FBX=F:/My Documents/Unreal Projects/Group-D-Ass2-Game/ProjectEspionage/Content/
+FBX=F:/My Documents/Unreal Projects/Group-D-Ass2-Game/ProjectEspionage/Content/
+FBXAnim=F:/My Documents/Unreal Projects/Group-D-Ass2-Game/ProjectEspionage/Content/
 FBXAnim=F:/My Documents/Unreal Projects/Group-D-Ass2-Game/ProjectEspionage/Content/
 GenericImport=F:/My Documents/Unreal Projects/Group-D-Ass2-Game/ProjectEspionage/Content/
+GenericImport=../../../Animation/Standard Run.fbx
+GenericImport=../../../../../../Users/asus/Documents/Models/Games/Computer Mouse.fbx
+GenericExport=F:/My Documents/Unreal Projects/Group-D-Ass2-Game/ProjectEspionage/Content/
 GenericExport=F:/My Documents/Unreal Projects/Group-D-Ass2-Game/ProjectEspionage/Content/
 GenericOpen=F:/My Documents/Unreal Projects/Group-D-Ass2-Game/ProjectEspionage/Content/
+GenericOpen=F:/My Documents/Unreal Projects/Group-D-Ass2-Game/ProjectEspionage/Content/
+GenericSave=F:/My Documents/Unreal Projects/Group-D-Ass2-Game/ProjectEspionage/Content/
 GenericSave=F:/My Documents/Unreal Projects/Group-D-Ass2-Game/ProjectEspionage/Content/
 MeshImportExport=F:/My Documents/Unreal Projects/Group-D-Ass2-Game/ProjectEspionage/Content/
+MeshImportExport=F:/My Documents/Unreal Projects/Group-D-Ass2-Game/ProjectEspionage/Content/
+WorldRoot=F:/My Documents/Unreal Projects/Group-D-Ass2-Game/ProjectEspionage/Content/
 WorldRoot=F:/My Documents/Unreal Projects/Group-D-Ass2-Game/ProjectEspionage/Content/
 Level=F:/My Documents/Unreal Projects/Group-D-Ass2-Game/ProjectEspionage/Content/
+Level=F:/My Documents/Unreal Projects/Group-D-Ass2-Game/ProjectEspionage/Content/
 Project=C:/Program Files (x86)/Epic Games/UE_4.18/
-=======
+Project=C:/Program Files (x86)/Epic Games/UE_4.18/
+None=======
+None=======
 LastLevel=/Game/TopDownBP/Maps/TestMap
->>>>>>> a53ba74bebe715848e2b38209c059928dffd95b8
 
 [MessageLog]
 LastLogListing=MapCheck
@@ -212,7 +241,8 @@ LastLogListing=PIE
 LastLogListing=FBXImport
 LastLogListing=LoadErrors
 LastLogListing=LoadErrors
-LastLogListing=PIE
+LastLogListing=FBXImport
+None=======
 None=======
 None=======
 PakFile.TimeStamp=2018.01.26-13.19.58
@@ -769,55 +799,13 @@ BlueprintGraph.TimeStamp=2018.01.26-13.19.52
 BlueprintGraph.LastCompileMethod=External
 HierarchicalLODUtilities.TimeStamp=2018.01.16-12.00.59
 HierarchicalLODUtilities.LastCompileMethod=Unknown
-<<<<<<< HEAD
 ExternalImagePicker.TimeStamp=2018.01.19-15.37.10
-ExternalImagePicker.LastCompileMethod=Unknown
-SynthBenchmark.TimeStamp=2018.01.26-13.18.02
-=======
 ExternalImagePicker.TimeStamp=2018.01.20-10.44.54
+ExternalImagePicker.LastCompileMethod=Unknown
 ExternalImagePicker.LastCompileMethod=External
+SynthBenchmark.TimeStamp=2018.01.26-13.18.02
 SynthBenchmark.TimeStamp=2018.01.16-10.04.18
->>>>>>> a53ba74bebe715848e2b38209c059928dffd95b8
 SynthBenchmark.LastCompileMethod=External
-
-[AssetEditorManager]
-CleanShutdown=True
-
-[RootWindow]
-ScreenPosition=X=332.000 Y=324.000
-ScreenPosition=X=285.000 Y=3.000
-None=======
-WindowSize=X=1280.000 Y=720.000
-InitiallyMaximized=True
-
-[SlateAdditionalLayoutConfig]
-Viewport 1.LayoutType=FourPanes2x2
-FourPanes2x2.Viewport 1.Percentages0=X=0.500 Y=0.500
-FourPanes2x2.Viewport 1.Percentages1=X=0.500 Y=0.500
-FourPanes2x2.Viewport 1.Percentages2=X=0.500 Y=0.500
-FourPanes2x2.Viewport 1.Percentages3=X=0.500 Y=0.500
-FourPanes2x2.Viewport 1.Viewport0.TypeWithinLayout=Default
-FourPanes2x2.Viewport 1.Viewport1.TypeWithinLayout=Default
-FourPanes2x2.Viewport 1.Viewport2.TypeWithinLayout=Default
-FourPanes2x2.Viewport 1.Viewport3.TypeWithinLayout=Default
-FourPanes2x2.Viewport 1.bIsMaximized=True
-FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
-
-[Directories2]
-UNR=F:/My Documents/UnrealGame/Group-D-Ass2-Game/ProjectEspionage/Content/TopDownBP/Maps
-BRUSH=F:/My Documents/Unreal Projects/Group-D-Ass2-Game/ProjectEspionage/Content/
-FBX=F:/My Documents/Unreal Projects/Group-D-Ass2-Game/ProjectEspionage/Content/
-FBXAnim=F:/My Documents/Unreal Projects/Group-D-Ass2-Game/ProjectEspionage/Content/
-GenericImport=../../../Animation/Standard Run.fbx
-GenericImport=F:/Downloads/FBX/A4_fbx.FBX
-None=======
-GenericExport=F:/My Documents/Unreal Projects/Group-D-Ass2-Game/ProjectEspionage/Content/
-GenericOpen=F:/My Documents/Unreal Projects/Group-D-Ass2-Game/ProjectEspionage/Content/
-GenericSave=F:/My Documents/Unreal Projects/Group-D-Ass2-Game/ProjectEspionage/Content/
-MeshImportExport=F:/My Documents/Unreal Projects/Group-D-Ass2-Game/ProjectEspionage/Content/
-WorldRoot=F:/My Documents/Unreal Projects/Group-D-Ass2-Game/ProjectEspionage/Content/
-Level=F:/My Documents/Unreal Projects/Group-D-Ass2-Game/ProjectEspionage/Content/
-Project=C:/Program Files (x86)/Epic Games/UE_4.18/
 
 [ModuleFileTracking]
 PakFile.TimeStamp=2018.01.26-13.15.47
@@ -2003,6 +1991,8 @@ K2Node_VariableGet.DefaultValueCategory=True
 Find_Random_Location_C.Description=True
 Find_Random_Location_C.Task=True
 Find_Random_Location_C.Default=True
+None=======
+None=======
 None=======
 None=======
 None=======
@@ -3986,8 +3976,6 @@ AIPerceptionStimuliSourceComponent.ComponentReplication=True
 AIPerceptionStimuliSourceComponent.Cooking=True
 AIPerceptionStimuliSourceComponent.Events=True
 K2Node_GetClassDefaults.PinOptions=True
-<<<<<<< HEAD
-=======
 TopDownCharacter_C.Variable=True
 TopDownCharacter_C.Sockets=True
 TopDownCharacter_C.ComponentReplication=True
@@ -4153,7 +4141,6 @@ AutoDoor_C.Replication=True
 AutoDoor_C.Input=True
 AutoDoor_C.Actor=True
 AutoDoor_C.TransformCommon=True
->>>>>>> a53ba74bebe715848e2b38209c059928dffd95b8
 TopDownController_C.Default=True
 TopDownController_C.Tick=True
 TopDownController_C.PlayerController=True
@@ -4164,8 +4151,6 @@ TopDownController_C.Controller=True
 TopDownController_C.Replication=True
 TopDownController_C.Input=True
 TopDownController_C.Actor=True
-<<<<<<< HEAD
-=======
 TEST_C.Tick=True
 TEST_C.Rendering=True
 TEST_C.Replication=True
@@ -4537,7 +4522,6 @@ LodDistance5=0.000000
 LodDistance6=0.000000
 LodDistance7=0.000000
 bImportAnimations=True
->>>>>>> a53ba74bebe715848e2b38209c059928dffd95b8
 
 [AssetEditorToolkitTabLocation]
 /Game/AI/AI_Patroll.AI_Patroll=1
@@ -4561,9 +4545,9 @@ bImportAnimations=True
 /Game/AI/Security_Camera/Security_Camera.Security_Camera=0
 /Game/AI/Tasks/Turn_Around.Turn_Around=1
 /Game/TopDownBP/TopDownOverview.TopDownOverview=1
-<<<<<<< HEAD
 /Game/TopDownBP/Blueprints/TopDownController.TopDownController=1
-=======
+/Game/TopDownBP/Blueprints/TopDownController.TopDownController=1
+None=======
 /Game/TopDownBP/StealthGuy/liam_Skeleton.liam_Skeleton=1
 /Game/TopDownBP/StealthGuy/liam.liam=1
 /Game/TopDownBP/StealthGuy/liam_PhysicsAsset.liam_PhysicsAsset=1
@@ -4584,7 +4568,6 @@ bImportAnimations=True
 /Game/TopDownBP/Blueprints/Door5.Door5=1
 /Game/TopDownBP/Blueprints/Door5.Door5=1
 /Game/TopDownBP/Blueprints/AutoDoor.AutoDoor=1
-/Game/TopDownBP/Blueprints/TopDownController.TopDownController=1
 /Game/TopDownBP/Blueprints/TEST.TEST=1
 /Game/TopDownBP/Blueprints/BPOpenDoor.BPOpenDoor=1
 /Game/TopDownBP/Blueprints/BPOpenDoor2.BPOpenDoor2=1
@@ -4610,7 +4593,6 @@ bImportAnimations=True
 /Game/TopDownBP/Character/HackingHUD.HackingHUD=1
 /Game/TopDownBP/Character/FinishedHUD.FinishedHUD=1
 /Game/TopDownBP/Character/StartHackHUD.StartHackHUD=1
->>>>>>> a53ba74bebe715848e2b38209c059928dffd95b8
 
 [DetailPropertyExpansion]
 BlackboardData="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[0].KeyType\" "
