--- a/ProjectEspionage/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/ProjectEspionage/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -102,7 +102,7 @@ ContentBrowserTab1.SelectedPaths=/Game/TopDownBP/Blueprints
 ContentBrowserTab1.SelectedPaths=/Game/TopDownBP/Blueprints
 ContentBrowserTab1.SelectedPaths=/Game/Mannequin/Character/Textures
 ContentBrowserTab1.SelectedPaths=/Game/TopDownBP/Maps
-ContentBrowserTab1.SelectedPaths=/Game/AI
+ContentBrowserTab1.SelectedPaths=/Game/TopDownBP/Blueprints
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
