Pulled new version of TestMap

--- a/ProjectEspionage/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/ProjectEspionage/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -99,17 +99,15 @@ None=======
 None=======
 None=======
 None=======
+None=======
 ContentBrowserTab1.SelectedPaths=/Game/TopDownBP/Maps
 ContentBrowserTab1.SelectedPaths=/Game/TopDownBP/Blueprints
 ContentBrowserTab1.SelectedPaths=/Game/TopDownBP/Blueprints
 ContentBrowserTab1.SelectedPaths=/Game/Mannequin/Character/Textures
 ContentBrowserTab1.SelectedPaths=/Game/TopDownBP/Maps
-<<<<<<< HEAD
 ContentBrowserTab1.SelectedPaths=/Game/TopDownBP/Blueprints
-=======
 ContentBrowserTab1.SelectedPaths=/Game/AI
-ContentBrowserTab1.SelectedPaths=/Game/TopDownBP/Character
->>>>>>> a53ba74bebe715848e2b38209c059928dffd95b8
+ContentBrowserTab1.SelectedPaths=/Game/TopDownBP/Blueprints
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
@@ -744,7 +742,7 @@ CleanShutdown=True
 
 [RootWindow]
 ScreenPosition=X=332.000 Y=324.000
-ScreenPosition=X=285.000 Y=3.000
+ScreenPosition=X=202.000 Y=85.000
 None=======
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=True
@@ -763,7 +761,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=F:/My Documents/UnrealGame/Group-D-Ass2-Game/ProjectEspionage/Content/TopDownBP/Maps
+UNR=../../../../../../Users/Joel/Documents/Unreal Projects/Group-D-Ass2-Game/ProjectEspionage/Content/TopDownBP/Maps
 BRUSH=F:/My Documents/Unreal Projects/Group-D-Ass2-Game/ProjectEspionage/Content/
 FBX=F:/My Documents/Unreal Projects/Group-D-Ass2-Game/ProjectEspionage/Content/
 FBXAnim=F:/My Documents/Unreal Projects/Group-D-Ass2-Game/ProjectEspionage/Content/
@@ -4459,6 +4457,10 @@ ProgressBar.Render Transform=True
 ProgressBar.Performance=True
 ProgressBar.Clipping=True
 ProgressBar.Navigation=True
+TestMap_C.Tick=True
+TestMap_C.Replication=True
+TestMap_C.Input=True
+TestMap_C.Actor=True
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bUseUnsortedMenus=False
@@ -4560,13 +4562,14 @@ bImportAnimations=True
 /Game/TopDownBP/Character/HackingHUD.HackingHUD=1
 /Game/TopDownBP/Character/FinishedHUD.FinishedHUD=1
 /Game/TopDownBP/Character/StartHackHUD.StartHackHUD=1
+/Game/TopDownBP/Maps/TestMap.TestMap:PersistentLevel.TestMap=1
 
 [DetailPropertyExpansion]
 BlackboardData="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[0].KeyType\" "
 DataAsset="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[0].KeyType\" "
 DataAsset="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 Object=
-Object=
+Object="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume=
 Brush=
@@ -6613,7 +6616,7 @@ PrimType=1
 None=======
 
 [SelectionDetails]
-PreserveScaleRatio=True
+PreserveScaleRatio=False
 
 [WidgetTemplatesExpanded]
 Extra=False
