--- a/ProjectEspionage/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/ProjectEspionage/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -107,7 +107,7 @@ ContentBrowserTab1.SelectedPaths=/Game/Mannequin/Character/Textures
 ContentBrowserTab1.SelectedPaths=/Game/TopDownBP/Maps
 ContentBrowserTab1.SelectedPaths=/Game/TopDownBP/Blueprints
 ContentBrowserTab1.SelectedPaths=/Game/AI
-ContentBrowserTab1.SelectedPaths=/Game/TopDownBP/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/StarterContent/Architecture
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
@@ -175,7 +175,7 @@ LastLogListing=PIE
 LastLogListing=FBXImport
 LastLogListing=LoadErrors
 LastLogListing=LoadErrors
-LastLogListing=PIE
+LastLogListing=LightingResults
 None=======
 None=======
 PakFile.TimeStamp=2018.01.26-13.19.58
@@ -739,7 +739,6 @@ SynthBenchmark.LastCompileMethod=External
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/TopDownBP/Blueprints/TopDownCharacter.TopDownCharacter
 
 [RootWindow]
 ScreenPosition=X=332.000 Y=324.000
@@ -762,7 +761,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/Joel/Documents/Unreal Projects/Group-D-Ass2-Game/ProjectEspionage/Content/TopDownBP/Maps
+UNR=F:/My Documents/UnrealGame/Group-D-Ass2-Game/ProjectEspionage/Content/TopDownBP/Maps
 BRUSH=F:/My Documents/Unreal Projects/Group-D-Ass2-Game/ProjectEspionage/Content/
 FBX=F:/My Documents/Unreal Projects/Group-D-Ass2-Game/ProjectEspionage/Content/
 FBXAnim=F:/My Documents/Unreal Projects/Group-D-Ass2-Game/ProjectEspionage/Content/
@@ -1897,10 +1896,10 @@ AnimationBlueprintEditor.TimeStamp=2018.01.26-13.15.45
 AnimationBlueprintEditor.LastCompileMethod=Unknown
 SequencerWidgets.TimeStamp=2018.01.26-13.15.48
 SequencerWidgets.LastCompileMethod=Unknown
-ApexDestruction.TimeStamp=2018.01.20-10.53.06
-ApexDestruction.LastCompileMethod=Unknown
-ApexDestructionEditor.TimeStamp=2018.01.20-10.53.06
-ApexDestructionEditor.LastCompileMethod=Unknown
+ApexDestruction.TimeStamp=2018.01.26-13.16.16
+ApexDestruction.LastCompileMethod=External
+ApexDestructionEditor.TimeStamp=2018.01.26-13.16.16
+ApexDestructionEditor.LastCompileMethod=External
 
 [DetailCategories]
 AI_Patroll_C.Tick=True
@@ -4755,6 +4754,10 @@ HackingHUD2_C.Render Transform=True
 HackingHUD2_C.Performance=True
 HackingHUD2_C.Clipping=True
 HackingHUD2_C.Navigation=True
+Actor.TransformCommon=True
+Actor.Rendering=True
+Actor.Input=True
+Actor.Actor=True
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bUseUnsortedMenus=False
@@ -4868,6 +4871,7 @@ bImportAnimations=True
 /Game/StarterContent/Architecture/Wall_400x300.Wall_400x300=1
 /Game/TopDownBP/Blueprints/Wall_400x200_DM.Wall_400x200_DM=1
 /Game/TopDownBP/Character/HackingHUD2.HackingHUD2=1
+/Game/TopDownBP/Assets/StoneWall.StoneWall=1
 
 [DetailPropertyExpansion]
 BlackboardData="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[0].KeyType\" "
@@ -4876,8 +4880,8 @@ DataAsset="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 Object=
 Object=
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-Volume=
-Brush=
+Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 AIPerceptionComponent="\"Object.AI Perception.SensesConfig\" \"Object.AI Perception.SensesConfig.SensesConfig[0]\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense.DetectionByAffiliation\" \"Object.Tags.ComponentTags\" "
 ActorComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
 SkeletalMeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
@@ -4922,8 +4926,8 @@ LogVisualizerSettings="\"Object.VisualLogger.GraphsBackgroundColor\" "
 NavigationSystem="\"Object.Agents.SupportedAgents\" "
 BlueprintFunctionLibrary="\"Object.Agents.SupportedAgents\" "
 AI_Patroll_C="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
-Character=
-Pawn=
+Character="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
+Pawn="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 AI_Character_C="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_AI_Character_C_91="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
 REINST_AI_Character_C_115="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
@@ -4964,6 +4968,7 @@ REINST_TopDownCharacter_C_168="\"Object.Character.CapsuleComponent.Object.Collis
 StaticMeshActor=
 
 [PlacementMode]
+RecentlyPlaced=/Game/StarterContent/Architecture/Floor_400x400.Floor_400x400;
 RecentlyPlaced=/Game/TopDownBP/Blueprints/BPBoom.BPBoom;
 RecentlyPlaced=/Game/TopDownBP/Blueprints/Wall_400x200_DM.Wall_400x200_DM;
 RecentlyPlaced=/Game/StarterContent/Architecture/Wall_400x200.Wall_400x200;
@@ -4983,7 +4988,6 @@ RecentlyPlaced=/Game/AI/Watchdog_AI.Watchdog_AI;
 RecentlyPlaced=/Script/Engine.TargetPoint;/Engine/Transient.ActorFactoryTargetPoint_0
 RecentlyPlaced=/Game/AI/AI_Patroll.AI_Patroll;
 RecentlyPlaced=/Script/Engine.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_14
-RecentlyPlaced=/Game/TopDownBP/StealthGuy/liam.liam;
 
 [DetailCustomWidgetExpansion]
 SkeletalMeshComponent=SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Rendering.TextureStreaming,SkeletalMeshComponent.Rendering.LOD,
