--- a/ProjectEspionage/Saved/Config/Windows/Game.ini
+++ b/ProjectEspionage/Saved/Config/Windows/Game.ini
@@ -1,1 +1,22 @@
+[/Script/UnrealEd.ProjectPackagingSettings]
+Build=IfProjectHasCode
+StagingDirectory=(Path="F:/My Documents/Ass2-Game")
+ForDistribution=False
+IncludeDebugFiles=False
+BlueprintNativizationMethod=Disabled
+bIncludeNativizedAssetsInProjectGeneration=False
+bGenerateNoChunks=False
+bBuildHttpChunkInstallData=False
+HttpChunkInstallDataDirectory=(Path="")
+HttpChunkInstallDataVersion=
+IncludeAppLocalPrerequisites=False
+ApplocalPrerequisitesDirectory=(Path="")
+bCookAll=False
+bCookMapsOnly=False
+bCompressed=False
+bEncryptIniFiles=False
+bEncryptPakIndex=False
+bNativizeBlueprintAssets=False
+bNativizeOnlySelectedBlueprints=False
+
 
