--- a/ProjectEspionage/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/ProjectEspionage/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -732,12 +732,12 @@ SynthBenchmark.TimeStamp=2018.01.16-10.04.18
 SynthBenchmark.LastCompileMethod=External
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
 
 [RootWindow]
 ScreenPosition=X=332.000 Y=324.000
-ScreenPosition=X=989.000 Y=-17.000
+ScreenPosition=X=315.000 Y=155.000
 None=======
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=True
@@ -1332,6 +1332,8 @@ PhysicsAssetEditor.TimeStamp=2018.02.02-12.46.41
 PhysicsAssetEditor.LastCompileMethod=Unknown
 AnimationBlueprintEditor.TimeStamp=2018.02.02-12.46.35
 AnimationBlueprintEditor.LastCompileMethod=Unknown
+SynthBenchmark.TimeStamp=2018.01.26-13.19.13
+SynthBenchmark.LastCompileMethod=Unknown
 
 [DetailCategories]
 AI_Patroll_C.Tick=True
