--- a/ProjectEspionage/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/ProjectEspionage/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -107,7 +107,7 @@ ContentBrowserTab1.SelectedPaths=/Game/Mannequin/Character/Textures
 ContentBrowserTab1.SelectedPaths=/Game/TopDownBP/Maps
 ContentBrowserTab1.SelectedPaths=/Game/TopDownBP/Blueprints
 ContentBrowserTab1.SelectedPaths=/Game/AI
-ContentBrowserTab1.SelectedPaths=/Game/StarterContent/Architecture
+ContentBrowserTab1.SelectedPaths=/Game/TopDownBP/StealthGuy
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
@@ -4762,6 +4762,43 @@ Actor.TransformCommon=True
 Actor.Rendering=True
 Actor.Input=True
 Actor.Actor=True
+REINST_TopDownCharacter_C_93.TransformCommon=True
+REINST_TopDownCharacter_C_93.Animation=True
+REINST_TopDownCharacter_C_93.Mesh=True
+REINST_TopDownCharacter_C_93.None=True
+REINST_TopDownCharacter_C_93.Physics=True
+REINST_TopDownCharacter_C_93.Clothing=True
+REINST_TopDownCharacter_C_93.Collision=True
+REINST_TopDownCharacter_C_93.Lighting=True
+REINST_TopDownCharacter_C_93.ClothingSimulation=True
+REINST_TopDownCharacter_C_93.Rendering=True
+REINST_TopDownCharacter_C_93.Tags=True
+REINST_TopDownCharacter_C_93.Activation=True
+REINST_TopDownCharacter_C_93.Cooking=True
+REINST_TopDownCharacter_C_93.Character Movement: Jumping / Falling=True
+REINST_TopDownCharacter_C_93.Character Movement (General Settings)=True
+REINST_TopDownCharacter_C_93.Character Movement: Walking=True
+REINST_TopDownCharacter_C_93.Character Movement: Swimming=True
+REINST_TopDownCharacter_C_93.Character Movement: Flying=True
+REINST_TopDownCharacter_C_93.Character Movement: Custom Movement=True
+REINST_TopDownCharacter_C_93.Character Movement (Rotation Settings)=True
+REINST_TopDownCharacter_C_93.Character Movement: Physics Interaction=True
+REINST_TopDownCharacter_C_93.Character Movement (Networking)=True
+REINST_TopDownCharacter_C_93.Character Movement=True
+REINST_TopDownCharacter_C_93.Character Movement: Avoidance=True
+REINST_TopDownCharacter_C_93.Character Movement: NavMesh Movement=True
+REINST_TopDownCharacter_C_93.RootMotion=True
+REINST_TopDownCharacter_C_93.NavMovement=True
+REINST_TopDownCharacter_C_93.Velocity=True
+REINST_TopDownCharacter_C_93.PlanarMovement=True
+REINST_TopDownCharacter_C_93.MovementComponent=True
+REINST_TopDownCharacter_C_93.Shape=True
+REINST_TopDownCharacter_C_93.Navigation=True
+REINST_TopDownCharacter_C_93.Character=True
+REINST_TopDownCharacter_C_93.Camera=True
+REINST_TopDownCharacter_C_93.Pawn=True
+REINST_TopDownCharacter_C_93.Input=True
+REINST_TopDownCharacter_C_93.Actor=True
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bUseUnsortedMenus=False
@@ -4876,6 +4913,8 @@ bImportAnimations=True
 /Game/TopDownBP/Blueprints/Wall_400x200_DM.Wall_400x200_DM=1
 /Game/TopDownBP/Character/HackingHUD2.HackingHUD2=1
 /Game/TopDownBP/Assets/StoneWall.StoneWall=1
+/Game/TopDownBP/StealthGuy/Topmat.Topmat=1
+/Game/TopDownBP/StealthGuy/Shoesmat.Shoesmat=1
 
 [DetailPropertyExpansion]
 BlackboardData="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[0].KeyType\" "
@@ -4887,12 +4926,12 @@ NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 AIPerceptionComponent="\"Object.AI Perception.SensesConfig\" \"Object.AI Perception.SensesConfig.SensesConfig[0]\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense.DetectionByAffiliation\" \"Object.Tags.ComponentTags\" "
-ActorComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
+ActorComponent="\"Object.Tags.ComponentTags\" "
 SkeletalMeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
 SkinnedMeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
 MeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
 PrimitiveComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
-SceneComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
+SceneComponent="\"Object.Tags.ComponentTags\" "
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.AutoReimport.AutoReimportDirectorySettings\" \"Object.AutoReimport.AutoReimportDirectorySettings.AutoReimportDirectorySettings[0]\" \"Object.AutoReimport.AutoReimportDirectorySettings.AutoReimportDirectorySettings[0].Wildcards\" \"Object.Blueprints\" \"Object.AutoSave\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 AssetManagerSettings="\"Object.Asset Manager.PrimaryAssetTypesToScan\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0]\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0].Directories\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0].Rules\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1]\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1].Directories\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1].Rules\" "
@@ -4956,7 +4995,7 @@ REINST_AI_Character_C_106="\"Object.Character.CharacterMovement.Object.Character
 REINST_AI_Character_C_118="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 AIPerceptionStimuliSourceComponent="\"Object.AI Perception.RegisterAsSourceForSenses\" \"Object.Tags.ComponentTags\" "
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
-TopDownCharacter_C=
+TopDownCharacter_C="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 StaticMeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
 BoxComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
 ShapeComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
@@ -4967,9 +5006,10 @@ REINST_TopDownCharacter_C_202="\"Object.Character.CharacterMovement.Object.Chara
 REINST_TopDownCharacter_C_220="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 DestructibleComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
 DestructibleMesh="\"Object.DestructibleMesh.DefaultDestructibleParameters.DepthParameters.DepthParameters[1]\" \"Object.Effects.FractureEffects.FractureEffects[1]\" \"Object.SkeletalMesh.Materials.Materials[1]\" "
-SkeletalMesh="\"Object.DestructibleMesh.DefaultDestructibleParameters.DepthParameters.DepthParameters[1]\" \"Object.Effects.FractureEffects.FractureEffects[1]\" \"Object.SkeletalMesh.Materials.Materials[1]\" "
+SkeletalMesh="\"Object.SkeletalMesh.Materials.Materials[1]\" "
 REINST_TopDownCharacter_C_168="\"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 StaticMeshActor=
+REINST_TopDownCharacter_C_93="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 
 [PlacementMode]
 RecentlyPlaced=/Game/StarterContent/Architecture/Floor_400x400.Floor_400x400;
