Added Assets on Map

--- a/ProjectEspionage/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/ProjectEspionage/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -100,6 +100,7 @@ None=======
 None=======
 None=======
 None=======
+None=======
 ContentBrowserTab1.SelectedPaths=/Game/TopDownBP/Maps
 ContentBrowserTab1.SelectedPaths=/Game/TopDownBP/Blueprints
 ContentBrowserTab1.SelectedPaths=/Game/TopDownBP/Blueprints
@@ -107,11 +108,8 @@ ContentBrowserTab1.SelectedPaths=/Game/Mannequin/Character/Textures
 ContentBrowserTab1.SelectedPaths=/Game/TopDownBP/Maps
 ContentBrowserTab1.SelectedPaths=/Game/TopDownBP/Blueprints
 ContentBrowserTab1.SelectedPaths=/Game/AI
-<<<<<<< HEAD
 ContentBrowserTab1.SelectedPaths=/Game/TopDownBP/StealthGuy
-=======
-ContentBrowserTab1.SelectedPaths=/Game/TopDownBP/Assets/clipboard
->>>>>>> d8abd8a386191e135e58c5b0ac42ba240fac87d6
+ContentBrowserTab1.SelectedPaths=/Game/TopDownBP/Assets/CardboardTidy
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
@@ -176,67 +174,99 @@ LastLevel=/Game/TopDownBP/Maps/TestMap
 [AssetEditorManager]
 CleanShutdown=True
 CleanShutdown=True
+CleanShutdown=True
 
 [RootWindow]
 ScreenPosition=X=332.000 Y=324.000
 ScreenPosition=X=332.000 Y=324.000
 ScreenPosition=X=145.000 Y=220.000
+ScreenPosition=X=332.000 Y=324.000
+ScreenPosition=X=202.000 Y=85.000
+WindowSize=X=1280.000 Y=720.000
 WindowSize=X=1280.000 Y=720.000
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=True
 InitiallyMaximized=True
+InitiallyMaximized=True
+None=======
 None=======
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
 Viewport 1.LayoutType=FourPanes2x2
+Viewport 1.LayoutType=FourPanes2x2
+FourPanes2x2.Viewport 1.Percentages0=X=0.500 Y=0.500
 FourPanes2x2.Viewport 1.Percentages0=X=0.500 Y=0.500
 FourPanes2x2.Viewport 1.Percentages0=X=0.500 Y=0.500
 FourPanes2x2.Viewport 1.Percentages1=X=0.500 Y=0.500
 FourPanes2x2.Viewport 1.Percentages1=X=0.500 Y=0.500
+FourPanes2x2.Viewport 1.Percentages1=X=0.500 Y=0.500
+FourPanes2x2.Viewport 1.Percentages2=X=0.500 Y=0.500
 FourPanes2x2.Viewport 1.Percentages2=X=0.500 Y=0.500
 FourPanes2x2.Viewport 1.Percentages2=X=0.500 Y=0.500
 FourPanes2x2.Viewport 1.Percentages3=X=0.500 Y=0.500
 FourPanes2x2.Viewport 1.Percentages3=X=0.500 Y=0.500
+FourPanes2x2.Viewport 1.Percentages3=X=0.500 Y=0.500
+FourPanes2x2.Viewport 1.Viewport0.TypeWithinLayout=Default
 FourPanes2x2.Viewport 1.Viewport0.TypeWithinLayout=Default
 FourPanes2x2.Viewport 1.Viewport0.TypeWithinLayout=Default
 FourPanes2x2.Viewport 1.Viewport1.TypeWithinLayout=Default
 FourPanes2x2.Viewport 1.Viewport1.TypeWithinLayout=Default
+FourPanes2x2.Viewport 1.Viewport1.TypeWithinLayout=Default
+FourPanes2x2.Viewport 1.Viewport2.TypeWithinLayout=Default
 FourPanes2x2.Viewport 1.Viewport2.TypeWithinLayout=Default
 FourPanes2x2.Viewport 1.Viewport2.TypeWithinLayout=Default
 FourPanes2x2.Viewport 1.Viewport3.TypeWithinLayout=Default
 FourPanes2x2.Viewport 1.Viewport3.TypeWithinLayout=Default
+FourPanes2x2.Viewport 1.Viewport3.TypeWithinLayout=Default
 FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.bIsMaximized=True
+FourPanes2x2.Viewport 1.bIsMaximized=True
+FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
 UNR=F:/My Documents/Unreal Projects/Group-D-Ass2-Game/ProjectEspionage/Content/TopDownBP/Maps
 UNR=F:/My Documents/Unreal Projects/Group-D-Ass2-Game/ProjectEspionage/Content/TopDownBP/Maps
+UNR=F:/My Documents/UnrealGame/Group-D-Ass2-Game/ProjectEspionage/Content/TopDownBP/Maps
+BRUSH=F:/My Documents/Unreal Projects/Group-D-Ass2-Game/ProjectEspionage/Content/
 BRUSH=F:/My Documents/Unreal Projects/Group-D-Ass2-Game/ProjectEspionage/Content/
 BRUSH=F:/My Documents/Unreal Projects/Group-D-Ass2-Game/ProjectEspionage/Content/
 FBX=F:/My Documents/Unreal Projects/Group-D-Ass2-Game/ProjectEspionage/Content/
 FBX=F:/My Documents/Unreal Projects/Group-D-Ass2-Game/ProjectEspionage/Content/
+FBX=F:/My Documents/Unreal Projects/Group-D-Ass2-Game/ProjectEspionage/Content/
+FBXAnim=F:/My Documents/Unreal Projects/Group-D-Ass2-Game/ProjectEspionage/Content/
 FBXAnim=F:/My Documents/Unreal Projects/Group-D-Ass2-Game/ProjectEspionage/Content/
 FBXAnim=F:/My Documents/Unreal Projects/Group-D-Ass2-Game/ProjectEspionage/Content/
 GenericImport=F:/My Documents/Unreal Projects/Group-D-Ass2-Game/ProjectEspionage/Content/
 GenericImport=../../../Animation/Standard Run.fbx
 GenericImport=F:/My Documents/FbxClipboard.fbx
+GenericImport=../../../Animation/Standard Run.fbx
+GenericImport=F:/Downloads/FBX/A4_fbx.FBX
+GenericExport=F:/My Documents/Unreal Projects/Group-D-Ass2-Game/ProjectEspionage/Content/
 GenericExport=F:/My Documents/Unreal Projects/Group-D-Ass2-Game/ProjectEspionage/Content/
 GenericExport=F:/My Documents/Unreal Projects/Group-D-Ass2-Game/ProjectEspionage/Content/
 GenericOpen=F:/My Documents/Unreal Projects/Group-D-Ass2-Game/ProjectEspionage/Content/
 GenericOpen=F:/My Documents/Unreal Projects/Group-D-Ass2-Game/ProjectEspionage/Content/
+GenericOpen=F:/My Documents/Unreal Projects/Group-D-Ass2-Game/ProjectEspionage/Content/
+GenericSave=F:/My Documents/Unreal Projects/Group-D-Ass2-Game/ProjectEspionage/Content/
 GenericSave=F:/My Documents/Unreal Projects/Group-D-Ass2-Game/ProjectEspionage/Content/
 GenericSave=F:/My Documents/Unreal Projects/Group-D-Ass2-Game/ProjectEspionage/Content/
 MeshImportExport=F:/My Documents/Unreal Projects/Group-D-Ass2-Game/ProjectEspionage/Content/
 MeshImportExport=F:/My Documents/Unreal Projects/Group-D-Ass2-Game/ProjectEspionage/Content/
+MeshImportExport=F:/My Documents/Unreal Projects/Group-D-Ass2-Game/ProjectEspionage/Content/
+WorldRoot=F:/My Documents/Unreal Projects/Group-D-Ass2-Game/ProjectEspionage/Content/
 WorldRoot=F:/My Documents/Unreal Projects/Group-D-Ass2-Game/ProjectEspionage/Content/
 WorldRoot=F:/My Documents/Unreal Projects/Group-D-Ass2-Game/ProjectEspionage/Content/
 Level=F:/My Documents/Unreal Projects/Group-D-Ass2-Game/ProjectEspionage/Content/
 Level=F:/My Documents/Unreal Projects/Group-D-Ass2-Game/ProjectEspionage/Content/
+Level=F:/My Documents/Unreal Projects/Group-D-Ass2-Game/ProjectEspionage/Content/
 Project=C:/Program Files (x86)/Epic Games/UE_4.18/
 Project=C:/Program Files (x86)/Epic Games/UE_4.18/
+Project=C:/Program Files (x86)/Epic Games/UE_4.18/
+None=======
+None=======
 None=======
 None=======
 LastLevel=/Game/TopDownBP/Maps/TestMap
@@ -247,12 +277,10 @@ LastLogListing=PIE
 LastLogListing=FBXImport
 LastLogListing=LoadErrors
 LastLogListing=LoadErrors
-<<<<<<< HEAD
 LastLogListing=LightingResults
-=======
 LastLogListing=FBXImport
 None=======
->>>>>>> d8abd8a386191e135e58c5b0ac42ba240fac87d6
+None=======
 None=======
 None=======
 PakFile.TimeStamp=2018.01.26-13.19.58
@@ -817,48 +845,6 @@ SynthBenchmark.TimeStamp=2018.01.26-13.18.02
 SynthBenchmark.TimeStamp=2018.01.16-10.04.18
 SynthBenchmark.LastCompileMethod=External
 
-<<<<<<< HEAD
-[AssetEditorManager]
-CleanShutdown=True
-
-[RootWindow]
-ScreenPosition=X=332.000 Y=324.000
-ScreenPosition=X=202.000 Y=85.000
-None=======
-WindowSize=X=1280.000 Y=720.000
-InitiallyMaximized=True
-
-[SlateAdditionalLayoutConfig]
-Viewport 1.LayoutType=FourPanes2x2
-FourPanes2x2.Viewport 1.Percentages0=X=0.500 Y=0.500
-FourPanes2x2.Viewport 1.Percentages1=X=0.500 Y=0.500
-FourPanes2x2.Viewport 1.Percentages2=X=0.500 Y=0.500
-FourPanes2x2.Viewport 1.Percentages3=X=0.500 Y=0.500
-FourPanes2x2.Viewport 1.Viewport0.TypeWithinLayout=Default
-FourPanes2x2.Viewport 1.Viewport1.TypeWithinLayout=Default
-FourPanes2x2.Viewport 1.Viewport2.TypeWithinLayout=Default
-FourPanes2x2.Viewport 1.Viewport3.TypeWithinLayout=Default
-FourPanes2x2.Viewport 1.bIsMaximized=True
-FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
-
-[Directories2]
-UNR=F:/My Documents/UnrealGame/Group-D-Ass2-Game/ProjectEspionage/Content/TopDownBP/Maps
-BRUSH=F:/My Documents/Unreal Projects/Group-D-Ass2-Game/ProjectEspionage/Content/
-FBX=F:/My Documents/Unreal Projects/Group-D-Ass2-Game/ProjectEspionage/Content/
-FBXAnim=F:/My Documents/Unreal Projects/Group-D-Ass2-Game/ProjectEspionage/Content/
-GenericImport=../../../Animation/Standard Run.fbx
-GenericImport=F:/Downloads/FBX/A4_fbx.FBX
-None=======
-GenericExport=F:/My Documents/Unreal Projects/Group-D-Ass2-Game/ProjectEspionage/Content/
-GenericOpen=F:/My Documents/Unreal Projects/Group-D-Ass2-Game/ProjectEspionage/Content/
-GenericSave=F:/My Documents/Unreal Projects/Group-D-Ass2-Game/ProjectEspionage/Content/
-MeshImportExport=F:/My Documents/Unreal Projects/Group-D-Ass2-Game/ProjectEspionage/Content/
-WorldRoot=F:/My Documents/Unreal Projects/Group-D-Ass2-Game/ProjectEspionage/Content/
-Level=F:/My Documents/Unreal Projects/Group-D-Ass2-Game/ProjectEspionage/Content/
-Project=C:/Program Files (x86)/Epic Games/UE_4.18/
-
-=======
->>>>>>> d8abd8a386191e135e58c5b0ac42ba240fac87d6
 [ModuleFileTracking]
 PakFile.TimeStamp=2018.01.26-13.15.47
 PakFile.TimeStamp=2018.02.02-13.28.13
@@ -4884,6 +4870,24 @@ REINST_TopDownCharacter_C_93.Camera=True
 REINST_TopDownCharacter_C_93.Pawn=True
 REINST_TopDownCharacter_C_93.Input=True
 REINST_TopDownCharacter_C_93.Actor=True
+BPDesk_C.Tick=True
+BPDesk_C.Rendering=True
+BPDesk_C.Replication=True
+BPDesk_C.Input=True
+BPDesk_C.Actor=True
+BPDesk_C.TransformCommon=True
+BPKeyboard_C.Tick=True
+BPKeyboard_C.Rendering=True
+BPKeyboard_C.Replication=True
+BPKeyboard_C.Input=True
+BPKeyboard_C.Actor=True
+BPKeyboard_C.TransformCommon=True
+BPMouse_C.Tick=True
+BPMouse_C.Rendering=True
+BPMouse_C.Replication=True
+BPMouse_C.Input=True
+BPMouse_C.Actor=True
+BPMouse_C.TransformCommon=True
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bUseUnsortedMenus=False
@@ -4942,6 +4946,7 @@ bImportAnimations=True
 /Game/TopDownBP/Blueprints/TopDownController.TopDownController=1
 /Game/TopDownBP/Blueprints/TopDownController.TopDownController=1
 None=======
+None=======
 /Game/TopDownBP/StealthGuy/liam_Skeleton.liam_Skeleton=1
 /Game/TopDownBP/StealthGuy/liam.liam=1
 /Game/TopDownBP/StealthGuy/liam_PhysicsAsset.liam_PhysicsAsset=1
@@ -4987,7 +4992,6 @@ None=======
 /Game/TopDownBP/Character/HackingHUD.HackingHUD=1
 /Game/TopDownBP/Character/FinishedHUD.FinishedHUD=1
 /Game/TopDownBP/Character/StartHackHUD.StartHackHUD=1
-<<<<<<< HEAD
 /Game/TopDownBP/Maps/TestMap.TestMap:PersistentLevel.TestMap=1
 /Game/TopDownBP/Blueprints/BPOpenDoor4.BPOpenDoor4=1
 /Game/TopDownBP/Blueprints/BPOpenDoor5.BPOpenDoor5=1
@@ -5003,9 +5007,21 @@ None=======
 /Game/TopDownBP/Assets/StoneWall.StoneWall=1
 /Game/TopDownBP/StealthGuy/Topmat.Topmat=1
 /Game/TopDownBP/StealthGuy/Shoesmat.Shoesmat=1
-=======
 /Game/TopDownBP/Assets/ReceptionDesk/Reception_desk_Desk.Reception_desk_Desk=1
->>>>>>> d8abd8a386191e135e58c5b0ac42ba240fac87d6
+/Game/TopDownBP/Assets/Cabinet/fbxDocuments_cub2.fbxDocuments_cub2=1
+/Game/TopDownBP/Assets/Desk/Desk1_Polygon_Handle.Desk1_Polygon_Handle=1
+/Game/TopDownBP/Assets/Desk/Desk1_Polygon_Desk.Desk1_Polygon_Desk=1
+/Game/TopDownBP/Assets/Desk/Desk1_Polygon_Door1.Desk1_Polygon_Door1=1
+/Game/TopDownBP/Blueprints/BPDesk.BPDesk=1
+/Game/TopDownBP/Assets/Monitor2.Monitor2=1
+/Game/TopDownBP/Blueprints/BPKeyboard.BPKeyboard=1
+/Game/TopDownBP/Assets/Mouse/Computer_Mouse_mouse.Computer_Mouse_mouse=1
+/Game/TopDownBP/Assets/Mouse/Computer_Mouse_mouse2.Computer_Mouse_mouse2=1
+/Game/TopDownBP/Blueprints/BPMouse.BPMouse=1
+/Game/TopDownBP/Assets/clipboard/FbxClipboard.FbxClipboard=1
+/Game/TopDownBP/Assets/CardboardTidy/Cardboard_Desk_Tidy_-_No_Subdivision_Plane001.Cardboard_Desk_Tidy_-_No_Subdivision_Plane001=1
+/Game/TopDownBP/Assets/CardboardTidy/Cardboard_Desk_Tidy_-_No_Subdivision_Line001.Cardboard_Desk_Tidy_-_No_Subdivision_Line001=1
+/Game/TopDownBP/Assets/CardboardTidy/Brown_Cardboard.Brown_Cardboard=1
 
 [DetailPropertyExpansion]
 BlackboardData="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[0].KeyType\" "
@@ -5017,12 +5033,12 @@ NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 AIPerceptionComponent="\"Object.AI Perception.SensesConfig\" \"Object.AI Perception.SensesConfig.SensesConfig[0]\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense.DetectionByAffiliation\" \"Object.Tags.ComponentTags\" "
-ActorComponent="\"Object.Tags.ComponentTags\" "
+ActorComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
 SkeletalMeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
 SkinnedMeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
 MeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
 PrimitiveComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
-SceneComponent="\"Object.Tags.ComponentTags\" "
+SceneComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.AutoReimport.AutoReimportDirectorySettings\" \"Object.AutoReimport.AutoReimportDirectorySettings.AutoReimportDirectorySettings[0]\" \"Object.AutoReimport.AutoReimportDirectorySettings.AutoReimportDirectorySettings[0].Wildcards\" \"Object.Blueprints\" \"Object.AutoSave\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 AssetManagerSettings="\"Object.Asset Manager.PrimaryAssetTypesToScan\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0]\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0].Directories\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0].Rules\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1]\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1].Directories\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1].Rules\" "
@@ -5103,6 +5119,16 @@ StaticMeshActor=
 REINST_TopDownCharacter_C_93="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/TopDownBP/Assets/CardboardTidy/Cardboard_Desk_Tidy_-_No_Subdivision_Line001.Cardboard_Desk_Tidy_-_No_Subdivision_Line001;
+RecentlyPlaced=/Game/TopDownBP/Blueprints/BPMouse.BPMouse;
+RecentlyPlaced=/Game/TopDownBP/Blueprints/BPKeyboard.BPKeyboard;
+RecentlyPlaced=/Game/TopDownBP/Assets/Keyboard.Keyboard;
+RecentlyPlaced=/Game/TopDownBP/Assets/Monitor2.Monitor2;
+RecentlyPlaced=/Game/TopDownBP/Assets/monitor.Monitor;
+RecentlyPlaced=/Game/TopDownBP/Blueprints/BPDesk.BPDesk;
+RecentlyPlaced=/Game/TopDownBP/Assets/Cabinet/fbxDocuments_cub3.fbxDocuments_cub3;
+RecentlyPlaced=/Game/TopDownBP/Assets/Cabinet/fbxDocuments_cub2_1.fbxDocuments_cub2_1;
+RecentlyPlaced=/Game/TopDownBP/Assets/Cabinet/fbxDocuments_cub2.fbxDocuments_cub2;
 RecentlyPlaced=/Game/StarterContent/Architecture/Floor_400x400.Floor_400x400;
 RecentlyPlaced=/Game/TopDownBP/Blueprints/BPBoom.BPBoom;
 RecentlyPlaced=/Game/TopDownBP/Blueprints/Wall_400x200_DM.Wall_400x200_DM;
@@ -5113,16 +5139,6 @@ RecentlyPlaced=/Game/TopDownBP/Blueprints/Cube_DM.Cube_DM;
 RecentlyPlaced=/Game/TopDownBP/Blueprints/Cube.Cube;
 RecentlyPlaced=/Game/TopDownBP/Blueprints/BPSmash.BPSmash;
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
-RecentlyPlaced=/Game/AI/AI_Character.AI_Character;
-RecentlyPlaced=/Game/AI/AI_helper/PathNode.PathNode;
-RecentlyPlaced=/Game/TopDownBP/Blueprints/AutoDoor.AutoDoor;
-RecentlyPlaced=/Game/AI/Security_Camera/Focus_Points.Focus_Points;
-RecentlyPlaced=/Game/AI/Security_Camera/Security_Camera.Security_Camera;
-RecentlyPlaced=/Game/AI/AI_Helper/FocusNode.FocusNode;
-RecentlyPlaced=/Game/AI/Watchdog_AI.Watchdog_AI;
-RecentlyPlaced=/Script/Engine.TargetPoint;/Engine/Transient.ActorFactoryTargetPoint_0
-RecentlyPlaced=/Game/AI/AI_Patroll.AI_Patroll;
-RecentlyPlaced=/Script/Engine.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_14
 
 [DetailCustomWidgetExpansion]
 SkeletalMeshComponent=SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Rendering.TextureStreaming,SkeletalMeshComponent.Rendering.LOD,
@@ -7081,7 +7097,7 @@ PrimType=1
 None=======
 
 [SelectionDetails]
-PreserveScaleRatio=False
+PreserveScaleRatio=True
 
 [WidgetTemplatesExpanded]
 Extra=False
